Fix hidpi for modern jogl